--- a/module02-solution/index.html
+++ b/module02-solution/index.html
@@ -2,9 +2,31 @@
 <html>
 <head>
 	<title>TESTE</title>
+
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 <h1>TESTE</h1>
+
+<div class="row">
+	
+	<div class="col-lg-4 col-md-6">
+		<section>
+			<p>Lorem ipsum In anim commodo culpa sint labore aute magna ut sed ut dolor qui. Lorem ipsum Aliqua in consequat ea laborum occaecat Excepteur enim cillum aliqua voluptate magna ad. Lorem ipsum Veniam officia reprehenderit elit consequat laboris dolore cupidatat do. Lorem ipsum Veniam est irure dolore labore quis. Lorem ipsum Ad pariatur labore in exercitation et dolore eu ad esse minim. Lorem ipsum Ea non irure officia anim ut fugiat non. Lorem ipsum Sit in cillum laboris minim et ea qui in sunt cillum magna ullamco. Lorem ipsum Exercitation Ut aliqua et sed minim dolore do reprehenderit do do. Lorem ipsum Velit proident enim occaecat ea et commodo proident Sint tempor nisi sint.</p>
+		</section>
+	</div>
+	<div class="col-lg-4 col-md-6">
+		<section>
+			<p>Lorem ipsum Sint dolore anim dolore esse in proident ea nostrud aute. Lorem ipsum Elit velit deserunt non do non. Lorem ipsum Aliquip laboris sint mollit magna fugiat cillum consequat in. Lorem ipsum Velit Ut consectetur Excepteur laborum reprehenderit nulla ullamco ut sit labore Duis nulla. Lorem ipsum Fugiat amet voluptate culpa esse labore in minim irure. Lorem ipsum Laboris dolore ex culpa consequat ea consequat velit qui. Lorem ipsum Quis ad dolor nostrud tempor dolore Excepteur sint ad. Lorem ipsum Veniam aliqua id Excepteur officia reprehenderit esse enim cupidatat non. Lorem ipsum Ex nisi incididunt anim dolore qui reprehenderit laboris quis ex sunt nisi.</p>
+		</section>
+	</div>
+	<div class="col-lg-4 col-md-12">
+		<section>
+			<p>Lorem ipsum Reprehenderit velit deserunt ullamco minim in dolore amet. Lorem ipsum Velit pariatur id Excepteur consectetur eiusmod reprehenderit ad. Lorem ipsum Consequat quis do Ut nulla mollit mollit pariatur sit irure consequat incididunt. Lorem ipsum Eiusmod ea pariatur culpa dolor anim officia aute. Lorem ipsum Exercitation ut incididunt et enim nisi Ut enim Ut reprehenderit mollit eiusmod. Lorem ipsum Culpa velit dolor laborum consectetur sit ad ut do. Lorem ipsum Dolore nulla non laborum laborum laborum labore do fugiat sunt commodo amet elit. Lorem ipsum Irure in nostrud eiusmod sint laborum pariatur. Lorem ipsum Irure pariatur laborum laborum exercitation enim enim elit ut ea. Lorem ipsum Cupidatat incididunt nisi qui nisi aliquip est Excepteur nulla reprehenderit elit sed mollit.</p>
+		</section>
+	</div>
+
+</div>
 
 </body>
 </html>
